# hallowdale

./: .gitignore  .ocamlformat  CHANGELOG.md  LICENSE.md  README.md  dune  dune-project  hallowdale.opam
.github/workflows/: build.yml  main.yml  tmp.yml
assets/tiled/: hallowdale.tiled-project
assets/tiled/extensions/: default-layer-properties.js
assets/tiled/rooms/: Deepnest_East.world  ac-repair_a.json  ac-repair_b.json  ac-repair_c.json  ac-repair_d.json  ac-repair_dreamer.json  ac-repair_e.json  ac-repair_f.json  ac-repair_g.json  basement_a.json  basement_abyss-climb.json  basement_b.json  basement_c.json  basement_d.json  basement_e.json  basement_f.json  beenz_1-a.json  beenz_2-a.json  beenz_2-b.json  beenz_2-c.json  beenz_3-a.json  beenz_3-colo.json  beenz_3-elevator.json  beenz_4-a.json  beenz_4-colo.json  beenz_5-lounge.json  beenz_5-palace-grounds.json  beenz_a.json  beenz_outlands-a.json  beenz_outlands-b.json  beenz_outlands-c.json  (+102 more)
config/: button_overrides.json.example  enemies.json  ghosts.json  jugs.json  keybinds.json.example  lore.json  npcs.json  weapons.json
saves/: 2.json  debug_locations
script/: check_layers.rb
src/: audio.ml  camera.ml  collision.ml  collision.mli  config.ml  controls.ml  dune  enemy.ml  enemy.mli  entity.ml  entity.mli  env.ml  file.ml  game.ml  ghost.ml  ghost.mli  interactions.ml  json.atd  json_j.ml  json_j.mli  json_t.ml  json_t.mli  menu.ml  npc.ml  platform.ml  platform.mli  player.ml  player.mli  progress.ml  render.ml  render.mli  room.ml  show.ml  sprite.ml  sprite.mli  state.ml  tiled.ml  types.ml  utils.ml
(+58 files in other folders)
